docs: refresh portable collaboration guides